--- a/x-pack/plugins/code/public/components/main/main.scss
+++ b/x-pack/plugins/code/public/components/main/main.scss
@@ -1,6 +1,6 @@
 .code-editor-container {
-  height: 100%;
-  overflow: auto;
+  overflow: hidden;
+  flex-grow: 1;
 }
 
 .code-auto-overflow {
